gcc-10 (10-20200416-1) UNRELEASED; urgency=medium

  * GCC snapshot, taken from the trunk (20200416, 44b326839d8).

  [ Nicolas Boulenguez ]
  * Remove ada-lib-info-file-prefix-map.diff (see 87972).

  [ Matthias Klose ]
  * libgcc-sN: Don't add the libgcc-N-dev breaks for backports.

 -- Matthias Klose <doko@debian.org>  Thu, 16 Apr 2020 15:49:55 +0200

gcc-10 (10-20200411-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200411, f883c46b487).
  * Fix gnat cross builds.
  * Strip again the compiler executables.

 -- Matthias Klose <doko@debian.org>  Sun, 12 Apr 2020 15:12:15 +0200

gcc-10 (10-20200410-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200410, 7478addd84a).

  [ Matthias Klose ]
  * Update libgccjit and libgphobos symbols files.
  * Remove the libgcc-sN provides from the last upload.
  * Don't install the empty gcc_lib_dir in gcc-N-base.
  * Configure with -enable-libphobos-checking=release.

  [ Nicolas Boulenguez ]
  * Remove some dependencies older than oldoldstable.
  * Build gnat. Remove obsolete no_install option for libgnat.
  * ada-lib-info-file-source-date-epoch.diff: port fix from gcc-9.
  * ada: install libgnat-BV.so without adding a .1 suffix.
  * Rename libgnatvsn to libgnat_util (following upstream).
    Make the compatibility project abstract instead of generating twice.
  * ada-changes-in-autogen-output.diff: keep more upstream default values in
    order to reduce the diff noise.

 -- Matthias Klose <doko@debian.org>  Fri, 10 Apr 2020 14:45:04 +0200

gcc-10 (10-20200402-1) unstable; urgency=medium

  * GCC snapshot, taken from the trunk (20200402, 86c92411320).
  * Fix PR target/94254 (PPC), proposed patch.
  * Update libstdc++6 symbols file for armel. Closes: #954954.
  * libgcc-sN: Provide libgcc-sN with an epoch version to rebuild gcc-8.
    Closes: #954826.

 -- Matthias Klose <doko@debian.org>  Thu, 02 Apr 2020 15:01:48 +0200

gcc-10 (10-20200324-1) unstable; urgency=medium
