@@ -7,6 +7,7 @@ gcc-10 (10-20200416-1) UNRELEASED; urgency=medium
 
   [ Matthias Klose ]
   * libgcc-sN: Don't add the libgcc-N-dev breaks for backports.
+  * Include the complete offload compilers in the gcc-snapshot builds.
 
  -- Matthias Klose <doko@debian.org>  Thu, 16 Apr 2020 15:49:55 +0200
 
